--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
   bloc: ^0.14.4
+  http: ^0.12.0+2
   shared_preferences: ^0.5.3+4
 
   # The following adds the Cupertino Icons font to your application.
