--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
     sdk: flutter
   bloc: ^0.14.4
   http: ^0.12.0+2
+  flutter_bloc: ^0.20.0
   shared_preferences: ^0.5.3+4
 
   # The following adds the Cupertino Icons font to your application.
