--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   bloc: ^0.14.4
   http: ^0.12.0+2
   flutter_bloc: ^0.20.0
+  equatable: ^0.4.0
+  rxdart: ^0.22.1+1
   shared_preferences: ^0.5.3+4
 
   # The following adds the Cupertino Icons font to your application.
