--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   equatable: ^0.4.0
   rxdart: ^0.22.1+1
   shared_preferences: ^0.5.3+4
+  phone_number: ^0.3.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
